tests/paczka2/big_fuzzy/57959396.err
Error in line 1: xBSwMccK0H S942 20,5
Error in line 9: xBSwMccK0H A189 31,7
Error in line 21: G9G A71 42,52
Error in line 28: gkegfJEA A189 65,5
Error in line 31: gkegfJEA S677 39,4
Error in line 20: eKYiipBPg A71 63,2
Error in line 34: eKYiipBPg S677 45,9
Error in line 22: jySiNpsOYg S942 280,0
Error in line 62: eKYiipBPg S677 89,01
Error in line 56: jySiNpsOYg A189 85,4
Error in line 65: jySiNpsOYg S942 78,4
Error in line 68: dfAXoP7OnIn A71 68,4
Error in line 67: jySiNpsOYg A189 7,1
Error in line 71: jySiNpsOYg S677 42,1
Error in line 76: S^77 S942 188,9
Error in line 66: gkegfJEA A189 366,0
Error in line 70: dfAXoP7OnIn A189 2,3
Error in line 75: S677 S942 76,8
Error in line 86: dfAXoP7OnIn A71 8,3
Error in line 93: S677 A189 89,91
Error in line 92: dfAXoP7OnIn A189 76,2
Error in line 95: eKYiipBPg S677 74,0
Error in line 87: S677 S677 58,3
Error in line 97: eKYiipBPg A71 21,8
Error in line 99: gkegfJEA S677 40,8
Error in line 110: jySiNpsOYg A71 55,3
Error in line 136: G9G S677 27,8
Error in line 133: gkegfJEA S942 187,6
Error in line 148: jySiNpsOYg S677 42,2
Error in line 149: gkegfJEA A71 20,4
Error in line 174: dfAXoP7OnIn S677 37,4
Error in line 185: G9G A189 76,9
Error in line 186: G9G S942 78,5
Error in line 194: xBSwMccK0H S677 0,36
Error in line 183: xBSwMccK0H A189 64,9
Error in line 209: jySiNpsOYg A71 N3,3
Error in line 210: S677 S942 64,2
Error in line 176: dfAXoP7OnIn A71 78,1
Error in line 208: xBSwMccK0H S677 0,6
Error in line 228: S677 S677 79,0
Error in line 217: dfAXoP7OnIn S942 46,9
Error in line 232: eKYiipBPg S942 4,6
Error in line 242: gkegfJEA S677 338,7
